[project]
name = "pricewatch-ph"
version = "0.1.0"
description = "PSA Basic Commodities Price Analytics Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web scraping
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    # Excel & data processing
    "openpyxl>=3.1.2",
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "thefuzz>=0.22.1",
    "python-Levenshtein>=0.25.1",
    # Cloud
    "google-cloud-storage>=2.16.0",
    "google-cloud-bigquery>=3.17.2",
    "pyarrow>=15.0.2",
    "db-dtypes>=1.2.0",
    # dbt (runs inside Docker as part of the Airflow pipeline)
    "dbt-core>=1.7.9",
    "dbt-bigquery>=1.7.6",
]

[dependency-groups]
dev = [
    # Local development tools — not installed in Docker
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",        # linting and formatting
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]   # pycodestyle, pyflakes, isort, pyupgrade

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "transformation"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"